fix(frontend): fix missing ellipsis on firefox

--- a/frontend_lib/src/component/Breadcrumbs/Breadcrumbs.styl
+++ b/frontend_lib/src/component/Breadcrumbs/Breadcrumbs.styl
@@ -21,6 +21,7 @@
       unicode-bidi plaintext
       overflow hidden
       text-overflow ellipsis
+      white-space nowrap
     & > a
       overflow hidden
       &:hover
